# text_utlis_django

./: README.md  manage.py  pyproject.toml  requirements.txt
main_app/: urls.py  views.py
templates/: analyzed.html  index.html
text_utils/: asgi.py  settings.py  urls.py  wsgi.py
